exo: Implement proper versioning for data device manager

Version 1 is reported but version 3 is currently implemented. That
is causing clients to crash. This makes us report version 3 and
take into account the version supported by the client.

Bug: 781036
Test: weston-info
Change-Id: I263eb12637c12a3b6604343da8ec0b5922718f3e
Reviewed-on: https://chromium-review.googlesource.com/752761
Commit-Queue: Daniele Castagna <dcastagna@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513653}
Former-commit-id: 5008ba658b1e308223736a24a6288d31423073e6